refactor: 代码重构